# poc

./: .env.example  .gitignore  1.22.5  Dockerfile  Makefile  README.md  docker-compose.yml  fix_chat_service.py  pyproject.toml  requirements.txt  run.bat  run.sh  setup.py
app/: main.py
app/api/: chat_routes.py  routes.py
app/config/: settings.py
app/frontend/: __init__.py  api.py  bare_bones_upload_page.py  callbacks.py  chat.py  components.py  config.py  document_manager.py  forms.py  main.py  response_analyzer.py  state.py  upload.py  utils.py
app/models/: document.py
app/services/: chat_service.py  chunking.py  document_processor.py  embedding.py  extractors.py  metadata.py  response_analyzer.py
app/tests/: test_api.py
docs/: developer_manual.md
frontend/alchemist/: README.md  angular.json  package.json
frontend/alchemist/src/: index.html  main.ts  styles.scss
frontend/alchemist/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.module.ts  app.routes.ts
frontend/alchemist/src/app/core/: core.module.ts
frontend/alchemist/src/app/core/interceptors/: auth.interceptor.ts  error.interceptor.ts  http-error.interceptor.ts
frontend/alchemist/src/app/core/models/: chat-message.model.ts  chat-session.model.ts  document.model.ts
frontend/alchemist/src/app/core/services/: api.service.ts  auth.service.ts  chat.service.ts  document.service.ts  theme.service.ts  websocket.service.ts
frontend/alchemist/src/app/features/chat/: chat.module.ts  (+1 more)
frontend/alchemist/src/app/theme/: theme.scss
frontend/alchemist/src/environments/: environment.prod.ts  environment.ts
tests/: __init__.py  conftest.py  pytest.ini  test_api_client.py  test_chat.py  test_components.py  test_forms.py
(+29 files in other folders)
